--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@fortawesome/free-regular-svg-icons": "6.7.2",
     "@fortawesome/free-solid-svg-icons": "6.7.2",
     "@fortawesome/react-fontawesome": "0.2.2",
+    "@tippyjs/react": "^4.2.6",
     "classnames": "^2.5.1",
     "cra-template": "1.2.0",
     "normalize.css": "^8.0.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
